refactor: Improve resource management and security in archive handling
Replaces manual resource management with try-with-resources statements in archive utility methods to prevent resource leaks. Enhances security by adding command injection protection and shell metacharacter validation in process execution. Implements bounded thread pool for better resource control and adds timeout handling for external command execution. Also improves file normalization using modern NIO APIs and adds fallback mechanisms for permission-denied operations.